--- a/lib/utilities/buttons.css
+++ b/lib/utilities/buttons.css
@@ -1,5 +1,6 @@
 .reset {
-  padding: 0.5rem 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
   border: 0;
   cursor: pointer;
   font-size: 1rem;
